--- a/templates/cowcheck/config.yml
+++ b/templates/cowcheck/config.yml
@@ -1,5 +1,7 @@
 name: Cowcheck
-description: |
-  Check Health of a Rancher Worker
-version: latest
-category: Management
+description: "Monitoring, visualisation and management for Docker"
+version: 1.1.0
+category: Monitoring
+maintainer: "Ilya Dmitrichenko <ilya@weave.works>"
+license: "Apache License v2.0"
+projectURL: https://github.com/weaveworks/scope
