--- a/templates/cowcheck/config.yml
+++ b/templates/cowcheck/config.yml
@@ -1,7 +1,7 @@
 name: Cowcheck
-description: "Monitoring, visualisation and management for Docker"
-version: 1.1.0
-category: Monitoring
-maintainer: "Ilya Dmitrichenko <ilya@weave.works>"
-license: "Apache License v2.0"
-projectURL: https://github.com/weaveworks/scope
+description: "Health Check of a Rancher Worker"
+version: latest
+category: Management
+maintainer: "Vikas Kumar <Vikas.Kumar.3@team.telstra.com"
+license: 
+projectURL: 
