--- a/templates/cowcheck/0/rancher-compose.yml
+++ b/templates/cowcheck/0/rancher-compose.yml
@@ -1,9 +1,26 @@
 .catalog:
-  name: "Wekan1"
-  version: "v0.1"
-  description: "The open-source Trello-like kanban (build with Meteor)"
-  uuid: cloudflare-0
-  minimum_rancher_version: v0.51.0
+  name: cowcheck
+  version: v0.1
+  description: |
+    HTTP end point of a Rancher Worker Health Monitor
+  minimum_rancher_version: v1.5.0
   questions:
+    - variable: AWS_REGION
+      label: "AWS Region"
+      description: "AWS Region that hosts the ECR"
+      default: ap-southeast-2
+      required: true
+	  type: "string"
+    - variable: ECR_REPOS_ACCOUNT
+      label: "ECR Repos Account"
+      description: "Account where ECR is hosted"
+      required: true
+	  type: "string"
+	- variable: CONTAINER_TO_MONITOR
+	  description: "Container which needs to be monitored"
+      default: ap-southeast-2
+      required: true
+	  type: "string"
 
-wekan1:
+cowcheck:
+  scale: 1
