--- a/templates/cowcheck/0/rancher-compose.yml
+++ b/templates/cowcheck/0/rancher-compose.yml
@@ -5,6 +5,11 @@
     HTTP end point of a Rancher Worker Health Monitor
   minimum_rancher_version: v1.5.0
   questions:
+    - variable: AWS_REGION
+      label: "AWS Region"
+      description: "AWS Region that hosts the ECR"
+      default: ap-southeast-2
+      required: true
 
 cowcheck:
   scale: 1
